--- a/projeto_geladeira_novo/macos/Runner/GoogleService-Info.plist
+++ b/projeto_geladeira_novo/macos/Runner/GoogleService-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAv7ftQuhRx_TfJ27S3s-6J69hVoibj8jI</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>528337686569</string>
 	<key>PLIST_VERSION</key>
